B&L QA/objects/Equipment_Master__c.object
<CustomObject>
    <description>Will be Used for KOR SOLTA Team.</description>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fraxel</fullName>
                </value>
                <value>
                    <fullName>Thermage</fullName>
                </value>
                <value>
                    <fullName>Liposonix</fullName>
                </value>
                <value>
                    <fullName>C+B</fullName>
                </value>
                <value>
                    <fullName>Isolaz</fullName>
                </value>
                <value>
                    <fullName>Vaser</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Equipment_Name__c</fullName>
        <label>Equipment Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fraxel DUAL</fullName>
                </value>
                <value>
                    <fullName>Fraxel SR750</fullName>
                </value>
                <value>
                    <fullName>Fraxel Re:store</fullName>
                </value>
                <value>
                    <fullName>Fraxel Re:fine</fullName>
                </value>
                <value>
                    <fullName>Fraxel Re:pair</fullName>
                </value>
                <value>
                    <fullName>Thermage TC3</fullName>
                </value>
                <value>
                    <fullName>Thermage NXT</fullName>
                </value>
                <value>
                    <fullName>Thermage CPT</fullName>
                </value>
                <value>
                    <fullName>Liposonix</fullName>
                </value>
                <value>
                    <fullName>C+B Permea</fullName>
                </value>
                <value>
                    <fullName>PPX</fullName>
                </value>
                <value>
                    <fullName>Isolaz</fullName>
                </value>
                <value>
                    <fullName>Vaser</fullName>
                </value>
                <value>
                    <fullName>Vaser 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HP_1_S_N__c</fullName>
        <label>HP-1 S/N</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HP_2_S_N__c</fullName>
        <label>HP-2 S/N</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HP_3_S_N__c</fullName>
        <label>HP-3 S/N</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacture_Date__c</fullName>
        <label>Manufacture Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DUAL</fullName>
                </value>
                <value>
                    <fullName>SR750</fullName>
                </value>
                <value>
                    <fullName>Re:store</fullName>
                </value>
                <value>
                    <fullName>Re:fine</fullName>
                </value>
                <value>
                    <fullName>Re:pair</fullName>
                </value>
                <value>
                    <fullName>TC3</fullName>
                </value>
                <value>
                    <fullName>NXT</fullName>
                </value>
                <value>
                    <fullName>CPT</fullName>
                </value>
                <value>
                    <fullName>P2</fullName>
                </value>
                <value>
                    <fullName>Permea</fullName>
                </value>
                <value>
                    <fullName>PPX</fullName>
                </value>
                <value>
                    <fullName>Isolaz</fullName>
                </value>
                <value>
                    <fullName>Original</fullName>
                </value>
                <value>
                    <fullName>Vaser2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SKU_Name__c</fullName>
        <label>SKU Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Owner</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>KOR SOLTA</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Equipment_Master</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Serial_No__c</fullName>
        <label>System Serial No</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Warranty__c</fullName>
        <label>Warranty</label>
        <type>Date</type>
    </fields>
    <label>Equipment Master</label>
    <nameField>
        <displayFormat>EM-{000000}</displayFormat>
        <label>Equipment Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment Master</pluralLabel>
    <recordTypes>
        <fullName>KOR_SOLTA_Equipment_Master</fullName>
        <active>true</active>
        <description>Record Type created for Korea SOLTA Team Usage.</description>
        <label>KOR SOLTA Equipment Master</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>